--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-home-title: H2O Theme For Jekyll
-description: 或许是最漂亮的Jekyll主题
+home-title: zplustar和一只小甲鱼
+description: zplustar的个人博客
 ---
 
 {% include header.html %}
